deploy/retrieveUnpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACN_Location_ID__c</fullName>
        <description>Apple Consultant Identifier fed from the online partner application submission</description>
        <inlineHelpText>Apple Consultant Identifier fed from the online partner application submission</inlineHelpText>
        <label>ACN Location ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AUP_Reject__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AUP Reject</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_C_Category_for_NPS_Email__c</fullName>
        <formula>MOD(value(CORE_Account_number__c),3)</formula>
        <inlineHelpText>This field is used by EMEA ONLY to decide which accounts get sent the NPS survey in a particular month.</inlineHelpText>
        <label>A/C Category for NPS Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Academic_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Academic Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Anniversary__c</fullName>
        <formula>if(AND(MONTH(Account_Birthday__c) = 2, DAY(Account_Birthday__c) = 29), DATE(YEAR(TODAY()),MONTH(Account_Birthday__c), 28), DATE(YEAR(TODAY()),MONTH(Account_Birthday__c),DAY(Account_Birthday__c)))</formula>
        <inlineHelpText>Shows when the customer will have their anniversary for current year.</inlineHelpText>
        <label>Account Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Birthday__c</fullName>
        <inlineHelpText>Denotes the date the account came online with Rackspace.</inlineHelpText>
        <label>Account Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account_Designation__c</fullName>
        <description>Shows the image for the account designation.</description>
        <formula>IF(RES_Account__c,IMAGE(&quot;https://na3.salesforce.com/servlet/servlet.FileDownload?file=01550000000X1tD&quot;, &quot;RES Image&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the image for the account designation.</inlineHelpText>
        <label>Account Designation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <displayFormat>RS-A-{0000000}</displayFormat>
        <label>Account ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Production_Id__c</fullName>
        <description>Used for the CI integration</description>
        <inlineHelpText>Used for the CI integration</inlineHelpText>
        <label>Account Production Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Hold__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use this field to denote accounts that have been closed due to non-payment.</description>
        <label>Accounting Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Acq_Sales_Rep_s_Team__c</fullName>
        <formula>Sales_Rep__r.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acq Sales Rep&apos;s Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Status__c</fullName>
        <label>Activity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Intro Email Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intro Call Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intro Call Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Ex Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Call Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Executed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Edit_Countries__c</fullName>
        <label>Address Edit Countries</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antartica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Address_Edit_States__c</fullName>
        <label>Address Edit States</label>
        <picklist>
            <controllingField>Address_Edit_Countries__c</controllingField>
            <picklistValues>
                <fullName>Aargau</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aarhus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberconwy &amp; Colwyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeen City</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aberdeenshire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aegan North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aegan South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agrigento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aguascalientes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aichi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akershus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alagoas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alberta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alsace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alto Parana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Am. Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amazonas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andalusia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar Is</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anglesey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anhui</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ankara</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Application_Received__c</fullName>
        <label>Application Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Sent__c</fullName>
        <label>Application Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Applications_Hosted__c</fullName>
        <description>Used to specify the applications that customers host with us. Customer page only.</description>
        <inlineHelpText>Used to specify the applications that customers host with us.</inlineHelpText>
        <label>Applications Hosted</label>
        <picklist>
            <picklistValues>
                <fullName>Backoffice: Accounting/Finance system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backoffice: Customer relationship mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backoffice: HR system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backoffice: Supply chain management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration platform(email,IM,project)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company intranet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distance/eLearning site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eCommerce site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento Community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Magento Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing/Advertising campaign site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online gaming site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online publishing(books, papers, mags)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rich media site(audio, video, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SaaS offering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared hosting platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social media(blogs, social networking)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survey platform</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Are_you_a_current_Ingram_Micro_Partner__c</fullName>
        <description>used by the Ingram Micro Partner Application site</description>
        <inlineHelpText>Determined from the site submission for the Ingram Micro Partner Application.</inlineHelpText>
        <label>Are you a current Ingram Micro Partner?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>At_Risk_Date__c</fullName>
        <description>This is the date when 80% will go out of contract.</description>
        <inlineHelpText>Please enter the date when 80% of the account will go out of contract.</inlineHelpText>
        <label>At Risk Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audio_Types__c</fullName>
        <label>Audio Types</label>
        <length>99</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avg_Dollar_Value_Customer_Engagement__c</fullName>
        <description>Average dollar value for customer engagement</description>
        <inlineHelpText>Average dollar value for customer engagement</inlineHelpText>
        <label>Avg. Dollar Value - Customer Engagement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Blacklist_Image__c</fullName>
        <formula>IF(Blacklist__c,IMAGE(&quot;https://na3.salesforce.com/servlet/servlet.FileDownload?file=01550000000XFOi&quot;, &quot;Blacklist Image&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blacklist Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blacklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to track customers and prospects that are fraudulent or non-paying.</description>
        <inlineHelpText>Please check the box if the customer/prospect if they are fraudulent or non-paying.  These accounts should not be sold to.</inlineHelpText>
        <label>Blacklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Partnerships__c</fullName>
        <description>used to identify the business units they are partners with us</description>
        <inlineHelpText>Please select the business units the partner is associated with Rackspace.</inlineHelpText>
        <label>Business Unit Partnerships</label>
        <picklist>
            <picklistValues>
                <fullName>Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email &amp; Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JungleDisk</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Business_Units_Sold__c</fullName>
        <description>This is the different business units they are currently customers of within Rackspace.</description>
        <inlineHelpText>This is the different business units they are currently customers of within Rackspace.</inlineHelpText>
        <label>Business Units Sold</label>
        <picklist>
            <picklistValues>
                <fullName>Managed Hosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email and Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cloud</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CEO_Name__c</fullName>
        <description>Displays the CEO Name.  Originally populated from DnB data.</description>
        <inlineHelpText>Displays the CEO Name.  Originally populated from DnB data.</inlineHelpText>
        <label>CEO Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMRR__c</fullName>
        <description>Denotes the Accounts CMRR.</description>
        <inlineHelpText>This is the Accounts CMRR pulled from CORE and updated once a month.</inlineHelpText>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CORE_Account_number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Account Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Circumstance_Description__c</fullName>
        <description>Description of the special circumstance for this customer.</description>
        <inlineHelpText>Description of the special circumstance for this customer.</inlineHelpText>
        <label>Circumstance Description</label>
        <picklist>
            <picklistValues>
                <fullName>Quad D Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quad C Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IAD Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quad E and F Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Growth_Strategy_IT_Plan__c</fullName>
        <inlineHelpText>Please enter the Customer&apos;s Growth Strategy and IT Plan.</inlineHelpText>
        <label>Client Growth Strategy/IT Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Closed_Won_Opps__c</fullName>
        <label>Closed Won Opps</label>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won, Validation Pending, Contract Kickback</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Read Only, Cloud Sales</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Split_Category__c</field>
            <operation>equals</operation>
            <value>No Split, Split - Primary</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cloud_Affiliate_ID__c</fullName>
        <description>used for partner accounts</description>
        <inlineHelpText>Please enter the Cloud Affiliate ID from the Cloud system for the partner.</inlineHelpText>
        <label>Cloud Affiliate ID #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloud_CAM__c</fullName>
        <label>Cloud CAM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CloudCAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cloud_Call_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>list provided of accounts that need to have cloud call - part of RackATTACK</description>
        <inlineHelpText>Based on list provided - these accounts need a call about cloud</inlineHelpText>
        <label>Cloud Call Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud_Hosting_Points_Monthly__c</fullName>
        <description>shows points for commissions for partners for cloud hosting opportunities</description>
        <inlineHelpText>Points partner has accumulated for Cloud Hosting opportunities.</inlineHelpText>
        <label>Cloud Hosting/Jungle Disk Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Linked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>used to show that the mh and cloud accounts are linked in the portal</description>
        <inlineHelpText>Shows that the Managed Hosting and Cloud accounts are linked in the portal.</inlineHelpText>
        <label>Cloud Linked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Registration_Number__c</fullName>
        <description>Use this field to enter the customer&apos;s company registration number</description>
        <inlineHelpText>Use this field to enter the customer&apos;s company registration number</inlineHelpText>
        <label>Company Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Revenue__c</fullName>
        <label>Company Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_Size__c</fullName>
        <label>Company Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-3 Customer Facing Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-10 Customer Facing Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-50 Customer Facing Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50+ Customer Facing Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-99</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100-499</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>500+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not sure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consolidated_Bill__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Will be checked if they have consolidated their Cloud and Managed Hosting accounts.</inlineHelpText>
        <label>Consolidated Bill</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Deviation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if there is any type of contract deviation.</inlineHelpText>
        <label>Contract Deviation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <inlineHelpText>This field is populated from when the agreement has been signed and returned.  It is automatically populated.</inlineHelpText>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <inlineHelpText>Please select the contract type(s) for the partner account.</inlineHelpText>
        <label>Contract Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDF</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antartica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia-Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>British Indian Ocean Territory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Credit_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if Partner received a credit as payment.</description>
        <inlineHelpText>Select if the Partner prefers account credit for payment from referrals.</inlineHelpText>
        <label>Credit Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Memo_Pipeline__c</fullName>
        <inlineHelpText>Based on CORE data from data warehouse.</inlineHelpText>
        <label>Credit Memo Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Customer_Trends__c</fullName>
        <inlineHelpText>Please enter the customers current trends.</inlineHelpText>
        <label>Current Customer Trends</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Hosting_Provider__c</fullName>
        <description>Denotes their current hosting provider.</description>
        <inlineHelpText>Enter their current hosting provider.</inlineHelpText>
        <label>Current Hosting Provider</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Hosting_Type__c</fullName>
        <description>Denotes their current hosting type.</description>
        <inlineHelpText>Enter their current hosting type.</inlineHelpText>
        <label>Current Hosting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Dedicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dedicated Self-Managed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Account_Number__c</fullName>
        <description>Field to display the customer account number if the partner is a Rackspace customer too.</description>
        <label>Customer Account Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Generated_Tickets__c</fullName>
        <inlineHelpText>Based on CORE data from data warehouse.</inlineHelpText>
        <label># Customer Generated Tickets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to identify that this Record is not only a Partner but also a Customer</description>
        <label>Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customers_placed_with_a_hosting_company__c</fullName>
        <label>Customers placed with a hosting company</label>
        <picklist>
            <picklistValues>
                <fullName>1-3 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-7 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-15 customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+ customers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DC_Location__c</fullName>
        <label>DC Location</label>
        <picklist>
            <picklistValues>
                <fullName>Weston Data Center (SAT1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegas Data Center (SAT2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dulles Data Center (IAD1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dallas/Fort Worth (DFW1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London (LON1)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London (LON2)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slough (LON3)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>D_U_N_S__c</fullName>
        <description>Custom field created for the integration of Hoovers</description>
        <label>D-U-N-S Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>